# Connect-4-Solver

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md
src/: bitboard.h  board.cpp  board.h  cmdline.h  defs.h  evaluate.h  history.h  main.cpp  misc.h  move_picker.cpp  move_picker.h  movegen.cpp  movegen.h  search.cpp  search.h  tt.cpp  tt.h
src/utils/: file.h  static_vec.h
